# hf-hands-on

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yaml
src/: fine-tuning.ipynb  playground.ipynb
